<resources>
    <string name="app_name">EcommerceConcept</string>
    <string name="address">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="other">Other</string>
    <string name="btn_buy">Buy now!</string>
    <string name="new_txt">New</string>
    <string name="best_seller">Best Seller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">$%1$s.00</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="filter_options">Filter options</string>


    <string-array name="brands">
        <item>Apple</item>
        <item>Asus</item>
        <item>Google</item>
        <item>HTC</item>
        <item>Huawei</item>
        <item>Samsung</item>
    </string-array>
    <string-array name="price">
        <item>$100-$200</item>
        <item>$200-$300</item>
        <item>$300-$400</item>
        <item>$400-$500</item>
        <item>$500+</item>
    </string-array>

    <string-array name="size">
        <item>3.5 to 4.5 inches</item>
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.5 inches</item>
    </string-array>

</resources>