<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.view.fragments.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/header_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/location_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/address_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:layout_marginStart="11dp"
                    android:textSize="15sp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/markpro"
                    app:layout_constraintLeft_toRightOf="@+id/location_img"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/down_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_down"
                    android:layout_marginStart="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/address_txt"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/filter_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_filter"
                android:layout_marginEnd="35dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/selectCategory_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="17dp"
                android:fontFamily="@font/markpro"
                android:text="@string/select_category"
                android:textColor="@color/blue"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_block" />
            <TextView
                android:id="@+id/view_all_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="33dp"
                android:textColor="@color/orange"
                android:textSize="15sp"
                android:fontFamily="@font/markpro"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_block"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/btn_scrollview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectCategory_txt"/>

            <EditText
                android:id="@+id/search_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:hint="@string/search"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/markpro"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="11dp"
                android:paddingVertical="9dp"
                android:paddingHorizontal="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/scan_ib"
                app:layout_constraintTop_toBottomOf="@+id/btn_scrollview"/>

            <ImageButton
                android:id="@+id/scan_ib"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/orange_rounded"
                android:src="@drawable/ic_scan"
                android:layout_marginTop="35dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="37dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_scrollview"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hot_sales_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="21dp"
                app:layout_constraintTop_toBottomOf="@+id/search_et"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/hot_sales_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_sales"
                    android:textSize="25sp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/markpro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/see_more_hs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more"
                    android:textSize="15sp"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/markpro"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager2"
                    android:layout_width="match_parent"
                    android:layout_height="182dp"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never"
                    app:layout_constraintTop_toBottomOf="@+id/hot_sales_tv"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/best_seller_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="22dp"
                app:layout_constraintTop_toBottomOf="@+id/hot_sales_cl"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    android:id="@+id/best_seller_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_seller"
                    android:textSize="25sp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/markpro"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/see_more_bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_more"
                    android:textSize="15sp"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/markpro"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/best_seller_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:overScrollMode="never"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/best_seller_tv"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_30_top"
        android:backgroundTint="@color/white"
        android:paddingTop="24dp"
        android:paddingStart="44dp"
        android:paddingEnd="20dp"
        android:paddingBottom="44dp"
        android:duration="300"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageButton
            android:id="@+id/exit_ib"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/round_10"
            android:backgroundTint="@color/blue"
            android:src="@drawable/ic_exit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_options"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/markpro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/done_btn"
            app:layout_constraintBottom_toBottomOf="@+id/done_btn"/>

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_10"
            app:backgroundTint="@color/orange"
            android:text="Done"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/markpro"
            android:textAllCaps="false"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/exit_ib">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Brand"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/markpro"
                android:layout_marginVertical="10dp"/>
            <Spinner
                android:id="@+id/spinner_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="7dp"
                android:background="@drawable/background_spinner"
                android:entries="@array/brands"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Price"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/markpro"
                android:layout_marginVertical="10dp"/>
            <Spinner
                android:id="@+id/spinner_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="7dp"
                android:background="@drawable/background_spinner"
                android:entries="@array/price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Size"
                android:textSize="18sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/markpro"
                android:layout_marginVertical="10dp"/>
            <Spinner
                android:id="@+id/spinner_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="7dp"
                android:background="@drawable/background_spinner"
                android:entries="@array/size"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>